fix: Update movie list to display flex to center align rows with fewer cards

--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,13 @@ header button.active::after {
     width: 100%;
 }
 
-.container {
+.search-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
     max-width: 420px;
+    min-width: 280px;
     width: 90%;
     margin: 0 auto;
     background-color: var(--secondary-bg);
@@ -74,7 +75,7 @@ header button.active::after {
     border-radius: 20px;
 }
 
-.search-container {
+.search-wrapper {
     display: flex;
     width: 100%;
     background-color: var(--input-bg);
@@ -83,11 +84,11 @@ header button.active::after {
     transition: border-color 0.2s ease;
 }
 
-.search-container:has(input:focus) {
+.search-wrapper:has(input:focus) {
     border: 1px solid var(--hover-accent);
 }
 
-.search-container input {
+.search-wrapper input {
     font-size: 1.1rem;
     width: 100%;
     padding: 6px 0 6px 18px;
@@ -97,12 +98,12 @@ header button.active::after {
     color: var(--primary-text);
 }
 
-.search-container input::placeholder {
+.search-wrapper input::placeholder {
     color: var(--placeholder-text);
     opacity: 1;
 }
 
-.search-container button {
+.search-wrapper button {
     padding: 0 14px;
     color: var(--primary-text);
     font-size: 1.1rem;
@@ -112,7 +113,7 @@ header button.active::after {
     transition: color 0.2s ease;
 }
 
-.search-container button:hover {
+.search-wrapper button:hover {
     color: var(--hover-accent);
 }
 
