--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1200px;
+    min-width: 280px;
     width: 90%;
     margin: 0 auto;
     padding: 3rem;
@@ -11,17 +12,33 @@
 }
 
 .movie-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    justify-content: center;
 }
 
 .movie-list li {
     display: flex;
-    justify-content: center;
+    flex: 0 0 250px;
+}
+
+@media (max-width: 1326px) {
+    .list-container {
+        max-width: 930px;
+    }
+}
+
+@media (max-width: 1013px) {
+    .list-container {
+        max-width: 650px;
+    }
+}
+
+@media (max-width: 691px) {
+    .list-container {
+        max-width: 420px;
+    }
 }
 
 @media (max-width: 580px) {
